@@ -24,6 +24,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #8397: Raise an error when attempting to mix iteration and regular
+  reads on a BZ2File object, rather than returning incorrect results.
+
 - Issue #5294: Fix the behavior of pdb's "continue" command when called
   in the top-level debugged frame.
 
